[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/HappyMonkey-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/click.wav" type="AudioStream" id=3]
[ext_resource path="res://UI/Title.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.298039, 0.113725, 0.113725, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -20.0
margin_right = 172.0
margin_bottom = 20.0

[node name="Title" type="TextureRect" parent="VBoxContainer"]
margin_right = 433.0
margin_bottom = 168.0
texture = ExtResource( 4 )

[node name="PlayButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 172.0
margin_right = 433.0
margin_bottom = 208.0
text = "Play"

[node name="FullscreenToggle" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 212.0
margin_right = 433.0
margin_bottom = 252.0
text = "Fullscreen"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="CreditsLabel" type="Label" parent="."]
margin_left = 33.0
margin_top = 468.0
margin_right = 292.0
margin_bottom = 531.0
text = "A game by Paul, Alex, and Leo Gestwicki
Featuring music by Robin Walma"
autowrap = true

[node name="AboutLabel" type="Label" parent="."]
margin_left = 743.0
margin_top = 514.0
margin_right = 1002.0
margin_bottom = 577.0
text = "Made for Global Game Jame 2023"
align = 2
autowrap = true

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="toggled" from="VBoxContainer/FullscreenToggle" to="." method="_on_FullscreenToggle_toggled"]
